ZODB Requires:
~~~~~~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Split off from CPSDocument into a separate package CPSSchemas.
- Select Widget (displays a menu to choose one string)
- CheckBox Widget (displays a checkbox to choose true/false)
- MultiSelect Widget (display a select multiple to choose a list of strings)
- First RTE (Epoz) integration. Only one per page right now. (unstable)
- String/Date/Text widgets has is_required properties
- adding hidden_empty properties 
Bug fixes:
~~~~~~~~~~
- #125: File/Image Widget must be able to not display anything if no file
- #144: Correctly unfreeze object before modifying them: pass the proxy.
- #158: Fix permission problem on renderEdit for frozen objects.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- sf code cleaning
- Vocabularies are now used for all "choice" widgets.
- renaming widget properties: 'title' to 'label_edit' and 'title_view' into 'label'
- Use a first version of simple storage adapters.